--- a/FINAL_LAB_TASK_DATABASE_2/views/add_product.html
+++ b/FINAL_LAB_TASK_DATABASE_2/views/add_product.html
@@ -12,15 +12,15 @@
 			<table>
 				<tr>
 					<td>Name:</td>
-					<td><input type="text" name="username" value="<?= $product['name'] ?>"></td>
+					<td><input type="text" name="username" value=""></td>
 				</tr>
 				<tr>
 					<td>Buying Price:</td>
-					<td><input type="text" name="buying_price" value="<?= $product['buying_price'] ?>"></td>
+					<td><input type="text" name="buying_price" value=""></td>
 				</tr>
 				<tr>
 					<td>Selling Price:</td>
-					<td><input type="text" name="selling_price" value="<?= $product['selling_price'] ?>"></td>
+					<td><input type="text" name="selling_price" value=""></td>
 				</tr>
 				<tr>
 				<td><input type="checkbox" name="display" value="">Display</td>
